--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-ipykernel==6.9.2
-ipython==8.1.1
-ipython-genutils==0.2.0
+python=3.10.9
+category_encoders==2.6.3
 joblib==1.3.2
-jupyterlab-pygments==0.1.2
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-notebook==6.4.10
-plotly==5.17.0
-python-dateutil==2.8.2
-scikit-learn==1.3.2
-scipy==1.8.0
-seaborn==0.11.2
+numpy==1.26.3
+pandas==2.1.4
+scikit_learn==1.2.2
+sklearn_features==0.0.2
+streamlit==1.27.1
+openpyxl==3.1.2
